manifest/devops/helloworldapp/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: helloworld
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    external-dns.alpha.kubernetes.io/hostname: helloworld.geoff-example.com
    kubernetes.io/ingress.class: nginx
#    kubernetes.io/tls-acme: "true"
#    certmanager.k8s.io/cluster-issuer: letsencrypt-non-prod
spec:
#  tls:
#  - hosts:
#    - geoff-example.com
#    secretName: helloworld
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: helloworld
            port:
              name: http
